--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <ul id="aboutSub" class="abus hidden space-y-4 p-4 bg-slate-200">
                     <li class="text-sm border-b-2 border-transparent hover:border-red-800 hover:text-red-700 pb-2"><a href="#missionText">Mission</a></li>
                     <li class="text-sm border-b-2 border-transparent hover:border-red-800 hover:text-red-700 pb-2"><a href="#visionText">Vision</a></li>
-                    <li class="text-sm border-b-2 border-transparent hover:border-red-800 hover:text-red-700 pb-2"><a href="#Facilities">Facilities</a></li>
+                    <!-- <li class="text-sm border-b-2 border-transparent hover:border-red-800 hover:text-red-700 pb-2"><a href="#Facilities">Facilities</a></li> -->
                     <li class="text-sm border-b-2 border-transparent hover:text-red-700"><a href="#Team">Team</a></li>
                   </ul>
                 </div>
@@ -130,7 +130,7 @@
               <ul id="subAbMobile" class="aboutMobile hidden text-slate-50 space-y-3 w-full bg-slate-50 bg-opacity-10" >
                 <li class="ml-12 p-2" ><a href="#misionText">The Mission</a></li>
                 <li class="ml-12 p-2" ><a href="#visionText">The Vision</a></li>
-                <li class="ml-12 p-2" ><a href="#Facilities">Facilities</a></li>
+                <!-- <li class="ml-12 p-2" ><a href="#Facilities">Facilities</a></li> -->
                 <li class="ml-12 p-2" ><a href="#Team">Team</a></li>
               </ul>
             </li>
