--- a/index.html
+++ b/index.html
@@ -1241,8 +1241,10 @@
     <!-- MAP -->
 
     <section id="Map">
-      <div class="w-full overflow-hidden bg-gray-100">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.369255518831!2d3.9218787760232567!3d7.424324412037984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1039ed36bbb589ed%3A0xa037a8a48ec30d66!2sAlpha%20Specialist%20Hospital!5e0!3m2!1sen!2sng!4v1699341311516!5m2!1sen!2sng" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </section>
+      <div class="map-responsive">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.2228563247263!2d3.9469157760233062!3d7.440576811825294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1039ed36bbb589ed%3A0xa037a8a48ec30d66!2sAlpha%20Specialist%20Hospital!5e0!3m2!1sen!2sng!4v1699589236425!5m2!1sen!2sng"   allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+</section>
 
     <!-- Moving Whatsapp Logo -->
     <div class="sticky bottom-0 left-3 hidden md:block ml-8 -mb-12 w-32 rounded-full md:bg-gray-100 md:bg-opacity-10 md:border-2 md:border-slate-50 animate-bounce z-40">
@@ -1274,7 +1276,7 @@
         <hr class="font-bold">
 
 
-        <p class="md:hidden">Copyrights, &copy;, All Rights Reserved</p>
+        <p class=" hidden md:hidden">Copyrights, &copy;, All Rights Reserved</p>
       </div>
       <div class="footer-container">
         <div class="row">
@@ -1299,15 +1301,23 @@
 
           <div class="footer-col">
             <h4>follow us</h4>
-            <div class="social-links">
+            <div class="social-links flex flex-col md:flex-row">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
+          <div class="footer-col">
+            <h4>Address</h4>
+            <ul>
+              <li><a href="#Map">No. 5 Muyiwa Sanda street, Alegongo estate, Akobo Ibadan, Nigeria.</a></li>
+              
+            </ul>
+          </div>
         </div>
       </div>
+
 
       
     </footer>
