--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
           <div class="flex justify-center text-2xl text-gray-800 my-4 py-2 capitalize font-bold">
             Contact Us
           </div>
-          <form action="" method="get" class="flex flex-col items-center p-6">
+          <form action="https://formsubmit.co/your@email.com" method="POST" class="flex flex-col items-center p-6">
             <!-- Detail 1 -->
             <div class="flex flex-col mb-4 md:items-start text-gray-800 w-full md:w-2/3 mx-auto">
               <!--  -->
@@ -1183,7 +1183,7 @@
                 <label for="name" class="pb-2 md:text-md">First Name:</label>
               </div>
               <div class="w-full">
-                <input type="text" id="name" name="name" required placeholder="John" class="w-full block  py-2 px-4 rounded-md border-2 focus:outline-blue-500 valid:outline-blue-500 invalid:outline-red-500 ">
+                <input type="text" id="name" name="Name" required placeholder="John" class="w-full block  py-2 px-4 rounded-md border-2 focus:outline-blue-500 valid:outline-blue-500 invalid:outline-red-500 ">
                 <span class="hidden text-sm text-rose-300">Error! Input not correct</span>
                 <span class="hidden text-sm text-green-300">Thank You</span>
               </div>
@@ -1221,6 +1221,19 @@
               <div class="w-full">
                 <!-- <input type="text" id="name" required name="name" required placeholder="Write us a text" class="w-full block min-h-fit h-32 md:w-5/6 py-2 px-4 rounded-md border-2 focus:outline-blue-500 valid:outline-blue-500 invalid:outline-red-500 "> -->
                 <textarea name="message" id="message" placeholder="Write us" cols="30" rows="10"  class="w-full h-12 block p-4 rounded-md border-2 focus:outline-blue-500 valid:outline-blue-500 invalid:outline-red-500 "></textarea>
+                <span class="hidden text-sm text-rose-300">Error! Input not correct</span>
+                <span class="hidden text-sm text-green-300">Thank You</span>
+              </div>
+            </div>
+
+            <!-- Detail 2 -->
+            <div class="flex flex-col mb-4 md:items-start text-gray-800 w-full md:w-2/3 mx-auto">
+              <!--  -->
+              <div class="">
+                <label for="name" class="pb-2 md:text-md">Last Name:</label>
+              </div>
+              <div class="w-full ">
+                <input type="text" id="name" name="name" required placeholder="Doe" class="w-full block  py-2 px-4 rounded-md border-2 focus:outline-blue-500 valid:outline-blue-500 invalid:outline-red-500">
                 <span class="hidden text-sm text-rose-300">Error! Input not correct</span>
                 <span class="hidden text-sm text-green-300">Thank You</span>
               </div>
@@ -1302,10 +1315,23 @@
           <div class="footer-col">
             <h4>follow us</h4>
             <div class="social-links flex flex-col md:flex-row">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <div class='flex items-baseline justify-start'>
+                <a href="#"><i class="fab fa-facebook-f mr-2"></i> </a>
+                <p class='pt-1 md:hidden '>Facebook</p>
+              </div>
+              <div class='flex items-baseline justify-start'>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <p class='pt-1 md:hidden'>Twitter</p>
+              </div>
+              <div class='flex items-baseline  justify-start'>
+                <a href="#https://instagram.com/alphaspecislisthospital?igshid=OGQ5ZDc2ODk2ZA=="><i class="fab fa-instagram"></i></a>
+
+                <p class='pt-1 md:hidden'>Instagram</p>
+              </div>
+              <div class='flex  justify-start items-baseline'>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>                <p class='pt-1 md:hidden'>LinkedIn</p>
+              </div>
+              
             </div>
           </div>
           <div class="footer-col">
