Fixed about page

--- a/index.html
+++ b/index.html
@@ -322,24 +322,24 @@
       </div>
 
       <!-- About Content -->
-      <div  class=" flex flex-col justify-center align-middle text-center bg-white w-full h-full md:flex-row md:text-left">
-        <div>
-          <img src="./Imggs/doctorsmiling-removebg-preview.png" alt="" class="flex justify-end align-baseline">
-        </div>
-
-        <div data-aos="fade-right" id="missionText" class="w-full text-center py-4 md:pr-16 md:mr-8 space-y-8 align-middle flex flex-col md:px-6 md:text-left md:w-[60%]">
-          <h1 class="text-xl font-bold text-gray-800">What We Are!</h1>
-          <p class="md:text-xl">Alpha Specialist Hospital is a licencsed medical facility situated in Akobo area of Ibadan operating since 2017. We are registered and licensed by relevant regulatory bodies including the NHIS. As a hospital, we have continually evolved in our operations and care service provision for our customers. This led to the recent commissioning of our new, fully equiped ultra-modern hospital affording us the opportunity to serve a wider range of people. </p>
-          <p class="md:text-xl">At Alpha Specialist Hospital, we work in compliance with local and international best practices when providing our services. It is our goal that everyone enjoys quality healthcare services at affordable cost.</p> 
-        </div>
-      </div>
       
       <!-- ABOUT-->
-
-        <div class=" flex flex-col justify-between align-middle md:px-6 md:flex-row">
-          <div data-aos="fade-right" class=" flex flex-col bg-blue-50 justify-between align-middle items-center w-full h-full md:w-1/2">
+      <div class="space-y-8">
+        <div  class=" py-6 flex flex-col justify-center align-middle text-center bg-white w-full h-full md:flex-row md:text-left">
+          <div>
+            <img src="./Imggs/doctorsmiling-removebg-preview.png" alt="" class="flex justify-end align-baseline">
+          </div>
   
-            <div data-aos="fade-right" id="missionText" class="">
+          <div data-aos="fade-right" id="missionText" class="mission-card w-[80%] text-center py-4 md:pr-16 md:mr-8 space-y-8 align-middle flex flex-col md:px-6 md:text-left lg:w-[60%]">
+            <h1 class="text-gray-800 text-xl font-bold bg-slate-200 rounded-sm pb-2 py-2 px-4 w-full md:w-1/2">What We Are!</h1>
+            <p class="md:text-xl">Alpha Specialist Hospital is a licencsed medical facility situated in Akobo area of Ibadan operating since 2017. We are registered and licensed by relevant regulatory bodies including the NHIS. As a hospital, we have continually evolved in our operations and care service provision for our customers. This led to the recent commissioning of our new, fully equiped ultra-modern hospital affording us the opportunity to serve a wider range of people. </p>
+            <p class="md:text-xl">At Alpha Specialist Hospital, we work in compliance with local and international best practices when providing our services. It is our goal that everyone enjoys quality healthcare services at affordable cost.</p> 
+          </div>
+        </div>
+        <div class="py-4 flex flex-col justify-between align-middle md:px-6 md:flex-row">
+          <div data-aos="fade-right" class=" py-4 flex flex-col bg-white justify-between align-middle items-center w-full h-full md:w-1/2">
+  
+            <div data-aos="fade-right" id="missionText" class="mission-card ">
               <div class="text-center md:py-6 md:text-left ">
                 <h1 class="text-gray-800 text-xl font-bold bg-slate-200 rounded-sm md:py-2 px-4 w-full md:w-1/2">Our Mission</h1>
                 <p class="pt-3 p-6 md:text-xl md:px-0">
@@ -349,7 +349,7 @@
             </div>
   
             <div data-aos="fade-down" id="visionText" class="">
-              <div class="text-center mt-8 py-6 mb-12 md:text-left">
+              <div class="text-center mt-8 py-6 mb-12 md:text-left bg-blue-50 mission-card">
                 <h1 class="text-gray-800 text-xl font-bold bg-slate-200 rounded-sm pb-2 py-2 px-4 w-full md:w-1/2">Our Vision</h1>
                 <p class="pt-3 p-4 md:text-xl md:px-0">
                   To be a leading medical center renowned for providing quality and affordable healthcare services.
@@ -357,10 +357,13 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-down" class="w-full object-fill md:w-1/2 bg-blue-50 flex justify-center md:justify-end align-middle">
-            <img src="./Imggs/doc1).jpeg" alt="" class="">
-          </div>
+          <!-- <div data-aos="fade-down" class="w-full object-fill md:w-1/2 bg-blue-50 flex justify-center md:justify-end align-middle">
+            <img src="./Imggs/doc1.jpeg" alt="" class="">
+          </div> -->
         </div>
+
+      </div>
+
     </section>
     <!-- ABOUT US SECTION ENDS -->
 
