--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           </div>
         </div>
         <div class="py-4 flex flex-col justify-between align-middle md:px-6 md:flex-row">
-          <div data-aos="fade-right" class=" py-4 flex flex-col bg-white justify-between align-middle items-center w-full h-full md:w-1/2">
+          <div data-aos="fade-right" class=" space-y-5 py-4 flex flex-col bg-white justify-between align-middle items-center w-full h-full md:w-1/2">
   
             <div data-aos="fade-right" id="missionText" class="mission-card ">
               <div class="text-center md:py-6 md:text-left ">
@@ -357,9 +357,9 @@
               </div>
             </div>
           </div>
-          <!-- <div data-aos="fade-down" class="w-full object-fill md:w-1/2 bg-blue-50 flex justify-center md:justify-end align-middle">
+          <div data-aos="fade-down" class="w-full object-fill md:w-1/2 bg-blue-50 flex justify-center md:justify-end align-middle">
             <img src="./Imggs/doc1.jpeg" alt="" class="">
-          </div> -->
+          </div>
         </div>
 
       </div>
@@ -756,11 +756,11 @@
       <!--  -->
       <img src="./Imggs/left_bvmv7q.png" alt="" class="right_bg">
       <!--  -->
-      <div class="container mx-auto my-6 flex flex-col justify-between align-middle">
+      <div class="mx-auto my-6 flex flex-col justify-between align-middle">
         <!-- service cards -->
-        <div class="service_card grid grid-cols-1 gap-2 md:flex-row md:grid-cols-2 lg:grid-cols-4">
+        <div class="service_card packages-container">
           <!-- Each Card -->
-          <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Obstetrics.jpg);">
+          <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/obs.jpg);">
             <div id="title">
               <h2 class="text-slate-100 text-2xl font-bold">OBSTETRICS AND GYNAECOLOGY</h2>
             </div>
@@ -787,7 +787,7 @@
               <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
             </a>
           </div>
-          <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Obstetrics.jpg);">
+          <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/family.jpg);">
             <div id="title">
               <h2 class="text-slate-100 text-2xl font-bold">FAMILY PLANNING</h2>
             </div>
@@ -819,7 +819,7 @@
             </a>
           </div>
           <!-- Card -->
-          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Microscope\ lab.jpg);">
+          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/oncology.jpg);">
             <div id="title">
               <h2 class="text-slate-100 text-2xl font-bold">MEDICAL ONCOLOGY</h2>
             </div>
@@ -830,7 +830,7 @@
             </a>
           </div>
           <!-- Card -->
-          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Obstetrics.jpg);">
+          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/peadeatricsjpg.jpg);">
             <div id="title">
               <h2 class="text-slate-100 text-2xl font-bold">PAEDIATRICS</h2>
             </div>
@@ -841,7 +841,7 @@
             </a>
           </div>
           <!-- card -->
-          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Obstetrics.jpg);">
+          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/dialysis.jpg);">
             <div id="title">
               <h2 class="text-slate-100 text-2xl font-bold">DIALYSIS</h2>
             </div>
@@ -1005,152 +1005,155 @@
   
     <section class="accordion accordion-container " id='faq'>
       <!-- FAQS Header -->
-      <div class="text-center mb-12 p-8">
+      <div class="text-center mb-12 p-8 mt-6">
         <h1 class="text">HAVE QUESTIONS?</h1>
         <hr>
       </div>
 
       <p class="capitalize text-2xl mb-6 text-center">Frequently asked questions</p>
       <!--  -->
-      <div class="accordion__container md:w-[80%]">
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">
-              When can i see a doctor when I come to the hospital?
-            </h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              Alpha Specialist Hospital run a 24 hour clinic service to all our
-              patients. Anytime you decide to vist ASH, there will always be a
-              doctor ready to attend to your health
-            </p>
+      <div class='flex items-center justify-center'>
+        <div class="accordion__container ">
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">
+                When can i see a doctor when I come to the hospital?
+              </h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                Alpha Specialist Hospital run a 24 hour clinic service to all our
+                patients. Anytime you decide to vist ASH, there will always be a
+                doctor ready to attend to your health
+              </p>
+            </div>
+          </div>
+  
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">
+                I lost my hospital card. Can I get another one?
+              </h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                Please visit our hospital's front desk or the administrative
+                office, where they can assist you in obtaining a replacement card.
+                They will guide you through the process and ensure that you have
+                the necessary documentation. If you have any questions or need
+                further assistance, please feel free to ask, and we'll be happy to
+                help you get your care card sorted out.
+              </p>
+            </div>
+          </div>
+  
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">
+                Can I see a doctor without my hospital card?
+              </h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                We can verify your identity using alternative forms of
+                identification, such as a photo ID or other personal information.
+                Our priority is your well-being, and we'll work with you to ensure
+                you receive the care you need. Please proceed to the registration
+                desk, and our staff will assist you in the process
+              </p>
+            </div>
+          </div>
+  
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">
+                Is ambulance available for emergencies?
+              </h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                Oh! Yes! We operate emergency ambulance service to attend to
+                emergency cases anytime and anywhere within ibadan. Any emergency?
+                Please call us at:
+                <a
+                  href="tel:+2348060010446"
+                  class="text-sm text-blue-700 font-bold"
+                  >0803-ASH-CARE</a
+                >
+              </p>
+            </div>
+          </div>
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">Can I work at Alpha?</h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                Certainly. However, we are currently not recruiting. We will be
+                sure to put it out there when services are required. Do ensure to
+                apply then.
+              </p>
+            </div>
+          </div>
+  
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">Can I do CS for delivery?</h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                Alpha Specialist Hospital offers well controlled delivery services
+                that soothes the patients choice. Vaginal delivery with pain
+                control or CS delivery
+              </p>
+            </div>
+          </div>
+  
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">Can I get a medical report?</h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                As long as you are our patient and you have been attended to and
+                certified by one of our doctors, yes!
+              </p>
+            </div>
+          </div>
+  
+          <div class="accordion__item">
+            <header class="accordion__header">
+              <i class="bx bx-plus accordion__icon"></i>
+              <h3 class="accordion__title">IDoes ASH have surgical theatre?</h3>
+            </header>
+  
+            <div class="accordion__content">
+              <p class="accordion__description">
+                Alpha Specialist Hospital has state of the art theatre rooms where
+                major and minor surgeries are performed following due
+                international standards. To check our facilities, click here:
+                <a href="#Facilities" class="text-blue-700 font-bold"
+                  >Facilities</a
+                >
+              </p>
+            </div>
           </div>
         </div>
 
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">
-              I lost my hospital card. Can I get another one?
-            </h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              Please visit our hospital's front desk or the administrative
-              office, where they can assist you in obtaining a replacement card.
-              They will guide you through the process and ensure that you have
-              the necessary documentation. If you have any questions or need
-              further assistance, please feel free to ask, and we'll be happy to
-              help you get your care card sorted out.
-            </p>
-          </div>
-        </div>
-
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">
-              Can I see a doctor without my hospital card?
-            </h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              We can verify your identity using alternative forms of
-              identification, such as a photo ID or other personal information.
-              Our priority is your well-being, and we'll work with you to ensure
-              you receive the care you need. Please proceed to the registration
-              desk, and our staff will assist you in the process
-            </p>
-          </div>
-        </div>
-
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">
-              Is ambulance available for emergencies?
-            </h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              Oh! Yes! We operate emergency ambulance service to attend to
-              emergency cases anytime and anywhere within ibadan. Any emergency?
-              Please call us at:
-              <a
-                href="tel:+2348060010446"
-                class="text-sm text-blue-700 font-bold"
-                >0803-ASH-CARE</a
-              >
-            </p>
-          </div>
-        </div>
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">Can I work at Alpha?</h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              Certainly. However, we are currently not recruiting. We will be
-              sure to put it out there when services are required. Do ensure to
-              apply then.
-            </p>
-          </div>
-        </div>
-
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">Can I do CS for delivery?</h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              Alpha Specialist Hospital offers well controlled delivery services
-              that soothes the patients choice. Vaginal delivery with pain
-              control or CS delivery
-            </p>
-          </div>
-        </div>
-
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">Can I get a medical report?</h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              As long as you are our patient and you have been attended to and
-              certified by one of our doctors, yes!
-            </p>
-          </div>
-        </div>
-
-        <div class="accordion__item">
-          <header class="accordion__header">
-            <i class="bx bx-plus accordion__icon"></i>
-            <h3 class="accordion__title">IDoes ASH have surgical theatre?</h3>
-          </header>
-
-          <div class="accordion__content">
-            <p class="accordion__description">
-              Alpha Specialist Hospital has state of the art theatre rooms where
-              major and minor surgeries are performed following due
-              international standards. To check our facilities, click here:
-              <a href="#Facilities" class="text-blue-700 font-bold"
-                >Facilities</a
-              >
-            </p>
-          </div>
-        </div>
       </div>
     </section>
 
