--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">Our dedicated team of obstetricians and gynecologists provides expert care for women at every stage of life, from prenatal and maternity care to reproductive health and gynecological procedures.</p>
             <a href="#contacts">
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
             </a>
           </div>
           <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/docGal.jpeg);">
@@ -775,7 +775,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">Our internal medicine specialists focus on diagnosing and managing a wide range of adult health concerns, offering personalized treatment plans to address your specific medical needs.</p>
             <a href="#Contacts">
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
             </a>
           </div>
           <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Surgery.jpg);">
@@ -784,7 +784,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">Our skilled surgical team is equipped to perform a variety of surgical procedures, from general surgery to specialized surgeries, ensuring the highest standards of safety and care.</p>
             <a href='#Contacts'>
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
             </a>
           </div>
           <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/family.jpg);">
@@ -794,7 +794,7 @@
             <p class="text-gray-300 text-center py-3">We provide comprehensive family planning services, offering counseling, contraception options, and reproductive health guidance to support your family planning goals.</p>
             <a href='#Contacts'>
 
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
             </a>
           </div>
           <div class="w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/Radiology-MRI.jpg);">
@@ -803,7 +803,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">  Our Radiation Oncology department specializes in cutting-edge cancer treatment, utilizing advanced radiation therapy techniques to target and treat cancer while preserving healthy tissue.</p>
             <a>
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
 
             </a>
           </div>
@@ -814,7 +814,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">Our well-equipped laboratory facilitates a wide range of diagnostic tests, allowing for timely and accurate assessment of various medical conditions, contributing to effective patient care.</p>
             <a href='#Contacts'>
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
 
             </a>
           </div>
@@ -825,7 +825,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">Our Medical Oncologists are experts in diagnosing and treating cancer using chemotherapy, immunotherapy, and targeted therapies, providing comprehensive cancer care with a focus on your well-being.</p>
             <a href='#Contacts'>
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
 
             </a>
           </div>
@@ -836,7 +836,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">Our pediatric care team specializes in providing healthcare services tailored to infants, children, and adolescents, focusing on their growth, development, and well-being.</p>
             <a href='#Contacts'>
-              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
 
             </a>
           </div>
@@ -847,7 +847,7 @@
             </div>
             <p class="text-gray-300 text-center py-3">We offer advanced dialysis services for patients with kidney conditions, ensuring they receive the life-saving treatment and support they need to maintain their health.</p>
            <a href='#Contacts'>
-             <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Know more ></button>
+             <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
 
            </a>
           </div>
