--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
           <div class="flex justify-center text-2xl text-gray-800 my-4 py-2 capitalize font-bold">
             Contact Us
           </div>
-          <form action="https://formsubmit.co/your@email.com" method="POST" class="flex flex-col items-center p-6">
+          <form action="https://formsubmit.co/alphaspecialisthospital100@gmail.com" method="POST" class="flex flex-col items-center p-6">
             <!-- Detail 1 -->
             <div class="flex flex-col mb-4 md:items-start text-gray-800 w-full md:w-2/3 mx-auto">
               <!--  -->
@@ -1245,7 +1245,7 @@
               </div>
             </div>
             <div class="">
-                <button type="submit" [disabled]="!form.form.valid" class="items-center py-4 px-6 mt-4 bg-blue-700 hover:bg-blue-500 rounded-lg border-2 border-gray-200 text-slate-50">
+                <button type="submit"  class="items-center py-4 px-6 mt-4 bg-blue-700 hover:bg-blue-500 rounded-lg border-2 border-gray-200 text-slate-50">
                   Send Message
                 </button>
             </div>
