--- a/index.html
+++ b/index.html
@@ -106,11 +106,14 @@
               class="mobileOp flex hover:bg-gray-400 hover:text-gray-800 w-full p-2 text-lg"
               href="#home"
               >
-              <span> <img src="./Imggs/home-active.svg" alt="" class="mr-4 w-8 bg-slate-200 rounded-full p-1"></span>
+              <!-- <span> <img src="./Imggs/home-active.svg" alt="" class="mr-4 w-8 bg-slate-200 rounded-full p-1"></span> -->
+              <i class="fa-solid fa-house mr-4 w-8 bg-slate-200 rounded-full p-1 text-black"></i>
               
               Home</a
             >
+            
             </li>
+            <i class="fa-solid fa-house"></i>
             <!-- NavAbout -->
             <li class="flex flex-col mb-4 w-full transition" onclick="more()">
               <!-- <img src="./Imggs/home-active.svg" alt="" class="w-6"> -->
