--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@
           <div class="accordion__item">
             <header class="accordion__header">
               <i class="bx bx-plus accordion__icon"></i>
-              <h3 class="accordion__title">IDoes ASH have surgical theatre?</h3>
+              <h3 class="accordion__title">Does ASH have surgical theatre?</h3>
             </header>
   
             <div class="accordion__content">
