--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="bg-blue-200 shadow-sm fixed top-0 w-full h-24 z-30">
       <nav class="nav container mx-auto p-6 flex justify-between align-middle">
         <!-- Logo-->
-        <div class="pt-2">
-          <img src="./Imggs/logs.png" alt="" class=" w-1/3 md:w-32">
+        <div class="">
+          <img src="./Imggs/logo3.png" alt="" width='60' height='60'>
         </div>
         <!-- Flex items -->
         <div class="flex justify-between items-center">
@@ -199,8 +199,8 @@
       <!-- Header and Tagline -->
       <div class="w-full text-center my-8">
         <p class="text-center text-3xl font-bold text-slate-50 pb-2 md:text-5xl">
-          <span class="flex align-middle justify-center bg-slate-300 w-fit mx-auto rounded-sm">
-            <img src="./Imggs/logs.png" class="max-w-sm h-16" alt="">
+          <span class="flex align-middle justify-center bg-slate-300 w-fit mx-auto rounded-sm mb-2">
+            <img src="./Imggs/logo3.png" width='150' height='150'>
           </span>
           ALPHA SPECIALIST HOSPITAL
         </h1>
@@ -1170,7 +1170,7 @@
 
     <section id="Contacts" class="py-12">
       <div class="container mx-auto w-full flex flex-col md:flex-row">
-        <div class="mx-auto container md:w-1/2 bg-blue-700 p-6 space-y-4 flex flex-col items-center text-center justify-around align-middle">
+        <div class="mx-auto container md:w-1/2 bg-blue-700 p-6 space-y-4  flex-col items-center text-center justify-around align-middle hidden md:flex">
           <div class="">
             <h3 class="text-2xl text-slate-50">How Can We Help You?</h3>
             <p class=" text-slate-50">You can reach to us by filling the form stating clearly how we could be of help. Our Team will reach out to you immediately</p>
